# clutchlog

./: CMakeLists.txt  LICENSE  README.md  banner.xcf  build_all.sh
clutchlog/: clutchlog.h
docs/: Doxyfile.in  _debug___o_f_f_2_c_make_files_23_810_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _debug___o_f_f_2_c_make_files_23_818_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _debug___o_f_f_2_c_make_files_23_822_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _debug___o_f_f_2_c_make_files_23_824_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _debug___o_f_f_2_c_make_files_23_825_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _debug___o_f_f_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _debug___o_n_2_c_make_files_23_810_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _debug___o_n_2_c_make_files_23_818_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _debug___o_n_2_c_make_files_23_820_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _debug___o_n_2_c_make_files_23_822_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _debug___o_n_2_c_make_files_23_824_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _debug___o_n_2_c_make_files_23_825_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _debug___o_n_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _rel_with_deb_info___o_f_f_2_c_make_files_23_810_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _rel_with_deb_info___o_f_f_2_c_make_files_23_818_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _rel_with_deb_info___o_f_f_2_c_make_files_23_822_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _rel_with_deb_info___o_f_f_2_c_make_files_23_824_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _rel_with_deb_info___o_f_f_2_c_make_files_23_825_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _rel_with_deb_info___o_f_f_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _rel_with_deb_info___o_n_2_c_make_files_23_810_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _rel_with_deb_info___o_n_2_c_make_files_23_818_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _rel_with_deb_info___o_n_2_c_make_files_23_822_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _rel_with_deb_info___o_n_2_c_make_files_23_824_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _rel_with_deb_info___o_n_2_c_make_files_23_825_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _rel_with_deb_info___o_n_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _release___o_f_f_2_c_make_files_23_810_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _release___o_f_f_2_c_make_files_23_818_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _release___o_f_f_2_c_make_files_23_822_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _release___o_f_f_2_c_make_files_23_824_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _release___o_f_f_2_c_make_files_23_825_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _release___o_f_f_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _release___o_n_2_c_make_files_23_810_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _release___o_n_2_c_make_files_23_818_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _release___o_n_2_c_make_files_23_822_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _release___o_n_2_c_make_files_23_824_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _release___o_n_2_c_make_files_23_825_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _release___o_n_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  annotated.html  annotated_dup.js  (+221 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+20 more)
doxygen/: doxyfile.cmake  doxygen-style.css
tests/: CMakeLists.txt  t-assert.cpp  t-color.cpp  t-color16M.cpp  t-color256.cpp  t-core.cpp  t-demo-extravagant.cpp  t-demo.cpp  t-depth-delta.cpp  t-dump.cpp  t-extra.cpp  t-filename.cpp  t-fmt-constructors.cpp  t-hash-color.cpp  t-log.cpp  t-one-line-if.cpp
